treesitter/grammar.js
    source_file: ($) => seq(repeat($.import_declaration), repeat($._declaration)),

    _declaration: ($) =>
      choice($.function_declaration, $.extern_function_declaration, $.export_declaration, $.struct_declaration, $.shape_declaration, $.union_declaration, $.enum_declaration, $.let_binding, $.compile_if_declaration, $.macro_invocation),

    // A top-level macro call like `mod.macro(args)`. A dedicated rule (rather than
    // reusing call_expression) keeps declarations out of the callee position.
    identifier: (_) => /[a-z_][a-zA-Z0-9_]*/,

    type_identifier: (_) => /[A-Z][a-zA-Z0-9_]*/,

    integer_literal: (_) =>
      token(choice(
        seq("0x", /[0-9a-fA-F]+(_[0-9a-fA-F]+)*/),
        seq("0o", /[0-7]+(_[0-7]+)*/),
        seq("0b", /[01]+(_[01]+)*/),
        /[0-9]+(_[0-9]+)*/,
      )),

    string_literal: (_) => seq('"', /([^"\\]|\\.)*/, '"'),

    _type: ($) =>
      choice(
        $.simple_type,
        $.array_type,
        $.slice_type,
        $.reference_type,
        $.optional_type,
        $.result_type,
        $.function_type,
      ),

    // `?T` is `Option<T>`; `!T` is `Result<T>`.
    optional_type: ($) => seq("?", $._type),

    simple_type: ($) => choice(
      seq(
        optional(seq($.identifier, ".")),
        $.type_identifier,
        repeat(seq(".", $.type_identifier)),
        optional($.type_arguments),
      ),
      "void",
      "never",
    ),

    function_declaration: ($) =>
      seq(
        optional("pub"),
        optional("unsync"),
        optional("unsafe"),
        "fun",
        field("name", $.function_name),
        optional(field("type_parameters", $.type_parameters)),
        "(", field("parameters", optional($.parameter_list)), ")",
        optional("noescape"),
        field("return_type", $._type),
        field("body", $.block),
      ),

    function_name: ($) =>
      choice(
        $.identifier,
        seq($.type_identifier, ".", $.identifier),
      ),

    // The comma between parameters is optional (`a Int, b Str` or `a Int b Str`).
    parameter_list: ($) => seq($.parameter, repeat(seq(optional(","), $.parameter)), optional(",")),

    parameter: ($) =>
      seq(
        field("name", choice($.identifier, $.allocator_identifier)),
        optional(choice("sync", "noescape")),
        field("type", $._type),
        optional(seq("=", field("default", $._expression))),
      ),

    // >>> Struct declaration

    enum_declaration: ($) =>
      seq(
        optional("pub"),
        "enum",
        field("name", $.type_identifier),
        optional(field("parameters", $.enum_parameters)),
        field("backing", $._type),
        optional(seq(
          "=",
          optional("|"),
          field("variants", $.enum_variants),
        )),
      ),

    enum_parameters: ($) => seq("(", optional($.parameter_list), ")"),

    // A local enum is an expression, and its lowercase variant names are also
    // valid expressions, so the variant list competes with bit-or and the
    // discriminant `=` with assignment. Left recursion with precedence above
    // PREC.BIT_OR / PREC.ASSIGN makes the greedy enum reading win.
    enum_variants: ($) =>
      prec.left(PREC.BIT_OR + 1, choice(
        $.enum_variant,
        seq($.enum_variants, "|", $.enum_variant),
      )),

    enum_variant: ($) =>
      prec(PREC.ASSIGN + 1, seq(
        field("name", $.identifier),
        // Immediate `(` (no space) marks associated data, mirroring how it is
        // always written and disambiguating from a following grouped expression.
        optional(seq(token.immediate("("), optional($.argument_list), ")")),
        optional(seq("=", optional("-"), field("discriminant", $.integer_literal))),
      )),

    // >>> Blocks

    block: ($) => seq("{", repeat($._expression), "}"),

    // >>> Expressions

    _expression: ($) =>
      choice(
        // Literals and atoms.
        $.integer_literal,
        $.string_literal,
        $.bytes_literal,
        $.rune_literal,
        $.boolean_literal,
        $.void,
        $.identifier,
        $.allocator_identifier,
        $.grouped_expression,
        $.array_literal,
        $.empty_slice,
        $.block,

        // Declarations (can appear inside blocks).
        $.function_declaration,
        $.struct_declaration,
        $.shape_declaration,
        $.union_declaration,
        $.enum_declaration,

        // Type-prefixed expressions.
        $.qualified_name,
        $.type_construction,

        // Bindings and assignment.
        $.let_binding,
        $.mut_binding,
        $.allocator_binding,
        $.assignment,

        // Operators.
        $.binary_expression,
        $.unary_expression,

        // Postfix.
        $.call_expression,
        $.field_access,
        $.index_expression,
        $.sub_slice,
        $.reference,
        $.dereference,

        // Function literal / closure.
        $.function_literal,

        // Conditional compilation.
        $.compile_if_expression,

        // Control flow.
        $.if_expression,
        $.when_expression,
        $.for_expression,
        $.match_expression,
        $.try_expression,
        $.return_expression,
        $.break_expression,
        $.continue_expression,
      ),

    // >>> Type-prefixed expressions

    // TypeName.methodName or TypeName.methodName<Args>
    let_binding: ($) =>
      prec.right(PREC.ASSIGN,
        seq(optional("pub"), "let", field("name", $.identifier), optional(field("type", $._type)), "=", field("value", $._expression))),

    assignment: ($) =>
      prec.right(PREC.ASSIGN, seq(
        field("target", $._assignable),
        "=",
        field("value", $._expression),
      )),

    _assignable: ($) =>
      choice($.identifier, $.field_access, $.index_expression, $.dereference),

    // >>> Binary expressions

    binary_expression: ($) =>
      choice(
        prec.left(PREC.OR, seq($._expression, "or", $._expression)),
        prec.left(PREC.AND, seq($._expression, "and", $._expression)),
        prec.left(PREC.BIT_OR, seq($._expression, "|", $._expression)),
        prec.left(PREC.BIT_XOR, seq($._expression, "^", $._expression)),
        prec.left(PREC.BIT_AND, seq($._expression, "&", $._expression)),
        prec.left(PREC.COMPARE, seq($._expression, "==", $._expression)),
        prec.left(PREC.COMPARE, seq($._expression, "!=", $._expression)),
        prec.left(PREC.COMPARE, seq($._expression, "<", $._expression)),
        prec.left(PREC.COMPARE, seq($._expression, "<=", $._expression)),
        prec.left(PREC.COMPARE, seq($._expression, ">", $._expression)),
        prec.left(PREC.COMPARE, seq($._expression, ">=", $._expression)),
        prec.left(PREC.SHIFT, seq($._expression, "<<", $._expression)),
        // Right-shift is two adjacent `>` rather than one token, so a nested
        // generic close like `Foo<Bar<T>>` can consume them as two `>`.
        prec.left(PREC.SHIFT, seq($._expression, ">", token.immediate(">"), $._expression)),
        prec.left(PREC.ADD, seq($._expression, "+", $._expression)),
        prec.left(PREC.ADD, seq($._expression, "-", $._expression)),
        prec.left(PREC.ADD, seq($._expression, "+%", $._expression)),
        prec.left(PREC.ADD, seq($._expression, "-%", $._expression)),
        prec.left(PREC.MUL, seq($._expression, "*", $._expression)),
        prec.left(PREC.MUL, seq($._expression, "/", $._expression)),
        prec.left(PREC.MUL, seq($._expression, "%", $._expression)),
        prec.left(PREC.MUL, seq($._expression, "*%", $._expression)),
      ),

    call_expression: ($) =>
      prec(PREC.POSTFIX, seq(
        optional("unsafe"),
        field("callee", $._expression),
        optional(field("type_arguments", $.type_arguments)),
        "(", field("arguments", optional($.argument_list)), ")",
      )),

    argument_list: ($) =>
      seq($._expression, repeat(seq(",", $._expression)), optional(",")),

    field_access: ($) =>
      prec.left(PREC.POSTFIX, seq(
        field("object", $._expression),
        ".",
        field("field", choice($.identifier, $.type_identifier, $.allocator_identifier)),
      )),

    if_expression: ($) =>
      seq(
        "if",
        field("condition", $._expression),
        field("then", $.block),
        optional(seq("else", field("else", $.block))),
      ),

    when_expression: ($) =>
      seq(
        "when",
        "{",
        repeat1($.when_case),
        optional($.when_else),
        "}",
      ),

    when_case: ($) =>
      seq(
        "case",
        field("condition", $._expression),
        ":",
        repeat($._expression),
      ),

    when_else: ($) =>
      seq(
        "else",
        ":",
        repeat($._expression),
      ),

    for_expression: ($) =>
      choice(
        // Unconditional: `for { ... }` — higher precedence so `{` is not
        // parsed as a block expression in condition position.
        prec(1, seq("for", field("body", $.block))),
        seq("for", field("condition", $._expression), field("body", $.block)),
        seq(
          "for",
          field("binding", $.identifier),
          "in",
          field("range", $.range),
          field("body", $.block),
        ),
      ),

    range: ($) =>
      seq(
        field("lo", $._expression),
        choice("..", "..="),
        field("hi", $._expression),
      ),

    // >>> Match expression

    match_expression: ($) =>
      seq(
        "match",
        field("subject", $._expression),
        "{",
        repeat($.match_arm),
        optional($.match_else),
        "}",
      ),

    match_arm: ($) =>
      seq(
        "case",
        field("pattern", $._match_pattern),
        optional(field("binding", $.identifier)),
        optional(seq("if", field("guard", $._expression))),
        ":",
        repeat($._expression),
      ),

    // A union variant or whole enum subset (a type), or a qualified enum variant
    // like `Color.red`.
    _match_pattern: ($) => choice($._type, $.enum_variant_pattern),

    enum_variant_pattern: ($) =>
      seq(field("type", $._type), ".", field("variant", $.identifier)),

    match_else: ($) =>
      seq(
        "else",
        optional(field("binding", $.identifier)),
        ":",
        repeat($._expression),
      ),

    // >>> Try expression

    try_expression: ($) =>
      seq(
        "try",
        field("expr", $._expression),
        optional(seq("is", field("type", $._type))),
        optional(seq(
          "else",
          optional(field("binding", $.identifier)),
          field("body", $.block),
        )),
      ),

    return_expression: ($) =>
      prec.right(PREC.ASSIGN, seq("return", $._expression)),

    break_expression: (_) => "break",

    continue_expression: (_) => "continue",

    // >>> Function literal / Closure
