treesitter/test/corpus/control_flow.txt
================================================================================
If then else
================================================================================

fun f() Int { if a { 1 } else { 2 } }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type
      (type_identifier))
    body: (block
      (if_expression
        condition: (identifier)
        then: (block
          (integer_literal))
        else: (block
          (integer_literal))))))

================================================================================
If without else
================================================================================

fun f() void { if a { 1 } }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (if_expression
        condition: (identifier)
        then: (block
          (integer_literal))))))

================================================================================
For loop with condition
================================================================================

fun f() void { for i != 10 { i = i + 1 } }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (for_expression
        condition: (binary_expression
          (identifier)
          (integer_literal))
        body: (block
          (assignment
            target: (identifier)
            value: (binary_expression
              (identifier)
              (integer_literal))))))))

================================================================================
Unconditional for loop
================================================================================

fun f() void { for { break } }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (for_expression
        body: (block
          (break_expression))))))

================================================================================
When expression
================================================================================

fun f() Int {
    when {
        case a: 1
        case b: 2
        else: 3
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type
      (type_identifier))
    body: (block
      (when_expression
        (when_case
          condition: (identifier)
          (integer_literal))
        (when_case
          condition: (identifier)
          (integer_literal))
        (when_else
          (integer_literal))))))

================================================================================
For-in range
================================================================================

fun f() void { for i in 0..10 { print_int(i) } }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (for_expression
        binding: (identifier)
        iterable: (range
          lo: (integer_literal)
          hi: (integer_literal))
        body: (block
          (call_expression
            callee: (identifier)
            arguments: (argument_list
              (identifier))))))))

================================================================================
For-in inclusive range
================================================================================

fun f() void { for i in 0..=10 { print_int(i) } }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (for_expression
        binding: (identifier)
        iterable: (range
          lo: (integer_literal)
          hi: (integer_literal))
        body: (block
          (call_expression
            callee: (identifier)
            arguments: (argument_list
              (identifier))))))))

================================================================================
For-in range with expressions
================================================================================

fun f() void { for i in start..end { print_int(i) } }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (for_expression
        binding: (identifier)
        iterable: (range
          lo: (identifier)
          hi: (identifier))
        body: (block
          (call_expression
            callee: (identifier)
            arguments: (argument_list
              (identifier))))))))

================================================================================
For-in slice
================================================================================

fun f() void { for x in xs { print_int(x) } }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (for_expression
        binding: (identifier)
        iterable: (identifier)
        body: (block
          (call_expression
            callee: (identifier)
            arguments: (argument_list
              (identifier))))))))

================================================================================
For-in slice with index
================================================================================

fun f() void { for x, i in xs { print_int(x) } }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (for_expression
        binding: (identifier)
        index: (identifier)
        iterable: (identifier)
        body: (block
          (call_expression
            callee: (identifier)
            arguments: (argument_list
              (identifier))))))))

================================================================================
For-in by reference
================================================================================

fun f() void { for &x in xs { print_int(x) } }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (for_expression
        binding: (identifier)
        iterable: (identifier)
        body: (block
          (call_expression
            callee: (identifier)
            arguments: (argument_list
              (identifier))))))))

================================================================================
For-in by mutable reference with index
================================================================================

fun f() void { for &mut x, i in xs { print_int(x) } }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (for_expression
        binding: (identifier)
        index: (identifier)
        iterable: (identifier)
        body: (block
          (call_expression
            callee: (identifier)
            arguments: (argument_list
              (identifier))))))))

================================================================================
Match exhaustive
================================================================================

fun f(x AB) Int {
    match x {
        case Int v: v
        case Bool: 0
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (simple_type
          (type_identifier))))
    return_type: (simple_type
      (type_identifier))
    body: (block
      (match_expression
        subject: (identifier)
        (match_arm
          pattern: (simple_type
            (type_identifier))
          binding: (identifier)
          (identifier))
        (match_arm
          pattern: (simple_type
            (type_identifier))
          (integer_literal))))))

================================================================================
Match with else
================================================================================

fun f(x ABC) void {
    match x {
        case Int v: print_int(v)
        else: print_str("other")
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (simple_type
          (type_identifier))))
    return_type: (simple_type)
    body: (block
      (match_expression
        subject: (identifier)
        (match_arm
          pattern: (simple_type
            (type_identifier))
          binding: (identifier)
          (call_expression
            callee: (identifier)
            arguments: (argument_list
              (identifier))))
        (match_else
          (call_expression
            callee: (identifier)
            arguments: (argument_list
              (string_literal))))))))

================================================================================
Match with else binding
================================================================================

fun f(x AB) void {
    match x {
        case Int v: print_int(v)
        else w: print_str("other")
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (simple_type
          (type_identifier))))
    return_type: (simple_type)
    body: (block
      (match_expression
        subject: (identifier)
        (match_arm
          pattern: (simple_type
            (type_identifier))
          binding: (identifier)
          (call_expression
            callee: (identifier)
            arguments: (argument_list
              (identifier))))
        (match_else
          binding: (identifier)
          (call_expression
            callee: (identifier)
            arguments: (argument_list
              (string_literal))))))))

================================================================================
Match with guard
================================================================================

fun f(x AB) Str {
    match x {
        case Int n if n > 10: "big"
        case Int: "small"
        case Bool: "bool"
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (simple_type
          (type_identifier))))
    return_type: (simple_type
      (type_identifier))
    body: (block
      (match_expression
        subject: (identifier)
        (match_arm
          pattern: (simple_type
            (type_identifier))
          binding: (identifier)
          guard: (binary_expression
            (identifier)
            (integer_literal))
          (string_literal))
        (match_arm
          pattern: (simple_type
            (type_identifier))
          (string_literal))
        (match_arm
          pattern: (simple_type
            (type_identifier))
          (string_literal))))))

================================================================================
Match as expression
================================================================================

fun f(x AB) Int {
    let y = match x {
        case Int v: v + 1
        case Bool: 0
    }
    y
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (simple_type
          (type_identifier))))
    return_type: (simple_type
      (type_identifier))
    body: (block
      (let_binding
        name: (identifier)
        value: (match_expression
          subject: (identifier)
          (match_arm
            pattern: (simple_type
              (type_identifier))
            binding: (identifier)
            (binary_expression
              (identifier)
              (integer_literal)))
          (match_arm
            pattern: (simple_type
              (type_identifier))
            (integer_literal))))
      (identifier))))

================================================================================
Match by reference binding
================================================================================

fun f(u U) Int {
    match u {
        case A &x: x.v
        case B &mut y: y.v
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (simple_type
          (type_identifier))))
    return_type: (simple_type
      (type_identifier))
    body: (block
      (match_expression
        subject: (identifier)
        (match_arm
          pattern: (simple_type
            (type_identifier))
          binding: (identifier)
          (field_access
            object: (identifier)
            field: (identifier)))
        (match_arm
          pattern: (simple_type
            (type_identifier))
          binding: (identifier)
          (field_access
            object: (identifier)
            field: (identifier)))))))

================================================================================
Match else by reference binding
================================================================================

fun f(u U) Int {
    match u {
        case A &x: x.v
        else &mut y: y.v
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (simple_type
          (type_identifier))))
    return_type: (simple_type
      (type_identifier))
    body: (block
      (match_expression
        subject: (identifier)
        (match_arm
          pattern: (simple_type
            (type_identifier))
          binding: (identifier)
          (field_access
            object: (identifier)
            field: (identifier)))
        (match_else
          binding: (identifier)
          (field_access
            object: (identifier)
            field: (identifier)))))))

================================================================================
Return, break, continue
================================================================================

fun f() Int { return 1  for { continue  break } }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type
      (type_identifier))
    body: (block
      (return_expression
        (integer_literal))
      (for_expression
        body: (block
          (continue_expression)
          (break_expression))))))

================================================================================
Try short form
================================================================================

fun f() R {
    let x = try foo()
    x
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type
      (type_identifier))
    body: (block
      (let_binding
        name: (identifier)
        value: (try_expression
          expr: (call_expression
            callee: (identifier))))
      (identifier))))

================================================================================
Try with is and else binding
================================================================================

fun f() E {
    let x = try foo() is Int else e { return e }
    x
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type
      (type_identifier))
    body: (block
      (let_binding
        name: (identifier)
        value: (try_expression
          expr: (call_expression
            callee: (identifier))
          type: (simple_type
            (type_identifier))
          binding: (identifier)
          body: (block
            (return_expression
              (identifier)))))
      (identifier))))

================================================================================
Try with else no binding
================================================================================

fun f() Str {
    let x = try foo() else { return "err" }
    x
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type
      (type_identifier))
    body: (block
      (let_binding
        name: (identifier)
        value: (try_expression
          expr: (call_expression
            callee: (identifier))
          body: (block
            (return_expression
              (string_literal)))))
      (identifier))))
================================================================================
Match with enum variant and subset patterns
================================================================================

fun classify(e AppErr) Int {
    match e {
        case Color.red: 1
        case IOErr io: 2
        else: 3
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (simple_type
          (type_identifier))))
    return_type: (simple_type
      (type_identifier))
    body: (block
      (match_expression
        subject: (identifier)
        (match_arm
          pattern: (enum_variant_pattern
            type: (simple_type
              (type_identifier))
            variant: (identifier))
          (integer_literal))
        (match_arm
          pattern: (simple_type
            (type_identifier))
          binding: (identifier)
          (integer_literal))
        (match_else
          (integer_literal))))))


================================================================================
Match arm with trailing if then else
================================================================================

fun f(x AB) void {
    match x {
        case Int v: if v > 0 { foo() }
        else other: bar()
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (simple_type
          (type_identifier))))
    return_type: (simple_type)
    body: (block
      (match_expression
        subject: (identifier)
        (match_arm
          pattern: (simple_type
            (type_identifier))
          binding: (identifier)
          (if_expression
            condition: (binary_expression
              (identifier)
              (integer_literal))
            then: (block
              (call_expression
                callee: (identifier)))))
        (match_else
          binding: (identifier)
          (call_expression
            callee: (identifier)))))))

================================================================================
Defer block
================================================================================

fun f() void { defer { cleanup() } }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (defer_expression
        body: (block
          (call_expression
            callee: (identifier)))))))
